Feat: authentication complete
